filter logic and final style

--- a/app/blocks/button/button.scss
+++ b/app/blocks/button/button.scss
@@ -94,18 +94,6 @@
       }
     }
 
-    &_small {
-      #{$b}__text {
-        padding: 2px 19px;
-      }
-    }
-
-    &_narrow-small {
-      #{$b}__text {
-        padding: 3px 20px;
-      }
-    }
-
     &:hover,
     &.is-active {
       color: $color-white;
@@ -138,6 +126,20 @@
 
     #{$b}__text {
       padding: 5px 22px;
+    }
+  }
+
+  &_border {
+    &_small {
+      #{$b}__text {
+        padding: 2px 19px;
+      }
+    }
+
+    &_narrow-small {
+      #{$b}__text {
+        padding: 3px 20px;
+      }
     }
   }
 }
