--- a/app/blocks/scrollbar/scrollbar-thin.scss
+++ b/app/blocks/scrollbar/scrollbar-thin.scss
@@ -1,17 +1,15 @@
-@import '../../node_modules/overlayscrollbars/css/OverlayScrollbars.css';
-
 //your theme name
-$theme-name: os-theme-custom;
+$theme-name: os-theme-custom-thin;
 
 //horizontal scrollbar
-$scrollbar-horizontal-size: 2px; //horizontal scrollbar height
-$scrollbar-horizontal-padding: 3px;
-$scrollbar-horizontal-inner-expansion: 3px;
+$scrollbar-horizontal-size: 1px; //horizontal scrollbar height
+$scrollbar-horizontal-padding: 2px;
+$scrollbar-horizontal-inner-expansion: 2px;
 $scrollbar-horizontal-track-background: $color-bg;
 $scrollbar-horizontal-track-background-hover: $color-bg;
 $scrollbar-horizontal-track-background-active: $color-bg;
 $scrollbar-horizontal-track-transition: background-color .3s;
-$scrollbar-horizontal-handle-min-size: 25px; //horizontal scrollbar handle min width
+$scrollbar-horizontal-handle-min-size: 20px; //horizontal scrollbar handle min width
 $scrollbar-horizontal-handle-max-size: none; //horizontal scrollbar handle max width
 $scrollbar-horizontal-handle-background: rgba($color-text-light, 1);
 $scrollbar-horizontal-handle-background-hover: rgba($color-text-light, .6);
@@ -19,14 +17,14 @@ $scrollbar-horizontal-handle-background-active: rgba($color-text-light, 1);
 $scrollbar-horizontal-handle-transition: background-color .3s;
 
 //vertical scrollbar
-$scrollbar-vertical-size: 2px; //vertical scrollbar width
-$scrollbar-vertical-padding: 3px;
-$scrollbar-vertical-inner-expansion: 3px;
+$scrollbar-vertical-size: 1px; //vertical scrollbar width
+$scrollbar-vertical-padding: 2px;
+$scrollbar-vertical-inner-expansion: 2px;
 $scrollbar-vertical-track-background: $color-bg;
 $scrollbar-vertical-track-background-hover: $color-bg;
 $scrollbar-vertical-track-background-active: $color-bg;
 $scrollbar-vertical-track-transition: background-color .3s;
-$scrollbar-vertical-handle-min-size: 25px; //vertical scrollbar handle min height
+$scrollbar-vertical-handle-min-size: 20px; //vertical scrollbar handle min height
 $scrollbar-vertical-handle-max-size: none; //vertical scrollbar handle max height
 $scrollbar-vertical-handle-background: rgba($color-text-light, 1);
 $scrollbar-vertical-handle-background-hover: rgba($color-text-light, .6);
@@ -165,4 +163,3 @@ $scrollbar-corner-background-color: transparent;
 
 @import 'scrollbar-dark.scss';
 @import 'scrollbar-light.scss';
-@import 'scrollbar-thin.scss';
