--- a/app/blocks/section/section.scss
+++ b/app/blocks/section/section.scss
@@ -289,7 +289,7 @@
       }
 
       @include screen('sm') {
-        padding: 40px 20px 42px;
+        padding: 40px 20px 44px;
       }
     }
 
@@ -408,6 +408,10 @@
         align-items: center;
         margin-right: 0;
         margin-bottom: 28px;
+      }
+
+      @include screen('sm') {
+        margin-bottom: 10px;
       }
     }
 
