--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -11,6 +11,7 @@ include ../blocks/content-zone/content-zone
 include ../blocks/divider/divider
 include ../blocks/dropdown/dropdown
 include ../blocks/facil-list/facil-list
+include ../blocks/filter-dialog/filter-dialog
 include ../blocks/filter-list/filter-list
 include ../blocks/filter-name/filter-name
 include ../blocks/filter-reset/filter-reset
