--- a/app/pages/ui-kit/ui-kit.pug
+++ b/app/pages/ui-kit/ui-kit.pug
@@ -742,7 +742,7 @@ block content
         +ui-description .compact-filter
         +grid
           +col(3)
-            +compact-filter
+            +compact-filter(style="width: 282px")
 
     //- News
     - var news = {img: "assets/images/news1.jpg", date: "September 9", title: "The perfect Workplace Do&nbsp;exist.&nbsp;5&nbsp;simple steps to&nbsp;make the office of&nbsp;your drem.", info: "For many employers, career success is&nbsp;desired. Establishing a&nbsp;profitable company, we&rsquo;re looking for the best candidates only, whose knowledge and experience can help to&nbsp;achieve career goals."};
