--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -66,6 +66,7 @@ $color-selected-dark: #131716;
 $color-form-border-dark: #232931;
 $color-form-border-light: #ecedee;
 $color-gray-light: #d1d2d3;
+$color-form-border-gray: #373e47;
 
 // ##########
 // Transitions
