--- a/app/components/compact-filter/compact-filter.scss
+++ b/app/components/compact-filter/compact-filter.scss
@@ -16,12 +16,26 @@
     box-shadow: 1px 1px 4px rgba(34, 42, 46, .18);
   }
 
+  &.is-filter-active {
+    background-color: $color-basic;
+  }
+
   &.is-opened {
     border-color: $color-text-light;
     background-color: $color-white;
-    box-shadow: 1px 1px 4px rgba(34, 42, 46, .18);
+    box-shadow: 1px 1px 4px rgba(34, 42, 46, 0);
 
-    &.is-opened:hover {
+    &:hover {
+      box-shadow: 1px 1px 4px rgba(34, 42, 46, 0);
+    }
+  }
+
+  &.is-dialog-open {
+    border-color: $color-text-light;
+    background-color: $color-white;
+    box-shadow: 1px 1px 4px rgba(34, 42, 46, 0);
+
+    &:hover {
       box-shadow: 1px 1px 4px rgba(34, 42, 46, 0);
     }
   }
@@ -33,12 +47,110 @@
   }
 
   &__head {
-    display: block;
+    display: flex;
+    align-items: center;
     position: relative;
     box-sizing: border-box;
-    padding: 5px 30px 5px 13px;
+    padding: 5px 30px 5px 10px;
     flex: 1;
     border-right: 1px solid $color-form-border-light;
+    transition: border $ease-main;
+    cursor: pointer;
+
+    #{$b}.is-filter-active & {
+      border-right-color: $color-form-border-gray;
+    }
+
+    #{$b}.is-filter-active.is-opened & {
+      border-right-color: $color-form-border-light;
+    }
+
+    #{$b}.is-dialog-open & {
+      border-right-color: transparent;
+    }
+  }
+
+  &__count {
+    @include text15;
+    @include gradient-main;
+
+    font-weight: 700;
+    letter-spacing: -.01em;
+    width: 19px;
+    height: 19px;
+    line-height: 19px;
+    color: $color-white;
+    display: block;
+    text-align: center;
+    border-radius: 50%;
+    margin-left: 7px;
+    transition: opacity $ease-main;
+    opacity: 0;
+    pointer-events: none;
+
+    #{$b}.is-filter-active & {
+      opacity: 1;
+    }
+
+    #{$b}.is-filter-add & {
+      opacity: 1;
+    }
+  }
+
+  &__reset {
+    width: 43px;
+    min-width: 43px;
+    display: block;
+    min-height: 36px;
+    color: $color-gray-light;
+    transition: background $ease-main, color $ease-main;
+    pointer-events: none;
+    cursor: default;
+
+    &:hover {
+      color: $color-gray-light;
+    }
+
+    #{$b}.is-filter-active & {
+      color: $color-white;
+      cursor: pointer;
+      pointer-events: auto;
+
+      &:hover {
+        color: $color-white;
+        background-color: $color-basic-dark;
+      }
+    }
+
+    #{$b}.is-filter-active.is-opened & {
+      color: $color-basic;
+      cursor: pointer;
+      pointer-events: auto;
+
+      &:hover {
+        background-color: $color-select-bg-light;
+      }
+    }
+
+    #{$b}.is-filter-add & {
+      color: $color-basic;
+      cursor: pointer;
+      pointer-events: auto;
+
+      &:hover {
+        background-color: $color-select-bg-light;
+      }
+    }
+
+    #{$b}.is-dialog-open & {
+      background-color: $color-basic;
+      color: $color-white;
+
+      &:hover {
+        background-color: $color-basic;
+        color: $color-white;
+      }
+    }
   }
 
   &__name {
@@ -51,7 +163,7 @@
     display: block;
     width: 100%;
     box-sizing: border-box;
-    padding: 5px 30px 5px 13px;
+    padding: 10px 30px 0 13px;
   }
 
   &__title {
@@ -60,17 +172,37 @@
     line-height: (26/15);
     font-weight: 700;
     letter-spacing: -.01em;
+    pointer-events: none;
+
+    #{$b}.is-filter-active & {
+      color: $color-white;
+    }
+
+    #{$b}.is-filter-active.is-opened & {
+      color: $color-basic;
+    }
+
+    #{$b}.is-dialog-open & {
+      color: $color-basic;
+    }
   }
 
   &__toggle {
     position: absolute;
     top: 50%;
-    right: 16px;
+    right: 12px;
     display: block;
     font-size: 0;
     line-height: 0;
     transform-origin: 50% 50% 0;
     transform: rotate(0);
+    margin-top: -3px;
+    transition: transform $ease-main;
+    pointer-events: none;
+
+    #{$b}.is-opened:not(.is-dialog-open) & {
+      transform: rotate(180deg);
+    }
   }
 
   &__icon {
@@ -84,21 +216,26 @@
     width: 100%;
     box-sizing: border-box;
     padding: 0 14px;
+    margin-top: 17px;
   }
 
-  &__bottom {
+  &__bottom,
+  &__dialog {
     position: absolute;
     display: block;
     width: 100%;
     top: 100%;
     left: -1px;
     margin-top: -1px;
-    z-index: 2;
+    z-index: 3;
     background-color: $color-white;
     border-radius: 0 0 3px 3px;
     border: 1px solid $color-text-light;
     border-top-color: $color-form-border-light;
     transition: opacity $ease-main;
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
 
     &::before {
       @include pseudo;
@@ -109,6 +246,54 @@
       left: 0;
       box-shadow: 1px 1px 4px rgba(34, 42, 46, .18);
       pointer-events: none;
+    }
+  }
+
+  &__bottom {
+    padding-bottom: 18px;
+
+    #{$b}.is-opened & {
+      opacity: 1;
+      pointer-events: auto;
+      visibility: visible;
+    }
+  }
+
+  &__dialog {
+
+    #{$b}.is-dialog-open & {
+      opacity: 1;
+      pointer-events: auto;
+      visibility: visible;
+    }
+  }
+
+  &__popup {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    display: block;
+    overflow: hidden;
+    pointer-events: none;
+    z-index: 3;
+  }
+
+  &__list {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: translate3d(100%, 0, 0);
+    transition: transform $ease-main;
+    visibility: hidden;
+
+    &.is-active {
+      transform: translate3d(0, 0, 0);
+      visibility: visible;
+      pointer-events: auto;
     }
   }
 }
