fix bug at Safari on lg

--- a/app/components/condition-search/condition-search.scss
+++ b/app/components/condition-search/condition-search.scss
@@ -95,6 +95,10 @@
     &:not(:first-child) {
       margin-left: 32px;
 
+      @include screen('xl') {
+        margin-left: 20px;
+      }
+
       @include screen('lg') {
         margin-left: 0;
       }
