--- a/app/pages/ui-kit/ui-kit.pug
+++ b/app/pages/ui-kit/ui-kit.pug
@@ -375,15 +375,19 @@ block content
         p Блок: blocks/scrollbar/scrollbar
       +ui-section-content()
         +grid
-          +col(4)
+          +col(3)
             +ui-description .js-scrollbar
             +e.scrolldemo.js-scrollbar
               +e.scrolldemo-block
-          +col(4)
+          +col(3)
+            +ui-description .js-scrollbar-thin
+            +e.scrolldemo.js-scrollbar-thin
+              +e.scrolldemo-block
+          +col(3)
             +ui-description .js-scrollbar-dark
             +e.scrolldemo.js-scrollbar-dark
               +e.scrolldemo-block
-          +col(4)
+          +col(3)
             +ui-description .js-scrollbar-light
             +e.scrolldemo.js-scrollbar-light
               +e.scrolldemo-block
