--- a/app/blocks/form-elements/form-elements.scss
+++ b/app/blocks/form-elements/form-elements.scss
@@ -208,6 +208,7 @@
     border-radius: 0;
     transform: translate3d(0, -50%, 0);
     transition: border $ease-main, background $ease-main, opacity $ease-main;
+    background-color: $color-bg;
 
     #{$check}:hover & {
       border-color: $color-form-border-dark;
