--- a/app/blocks/form-elements/form-elements.scss
+++ b/app/blocks/form-elements/form-elements.scss
@@ -686,6 +686,10 @@
         padding-top: 7px;
         padding-bottom: 7px;
 
+        @include screen('sm') {
+          background-color: $color-select-bg;
+        }
+
         #{$k}__item {
           @include text;
 
@@ -730,6 +734,10 @@
         border-color: $color-white;
         border-bottom-color: transparent;
         border-radius: 3px 3px 0 0;
+
+        @include screen('sm') {
+          background-color: $color-select-bg;
+        }
 
         &::before {
           opacity: 0;
