--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -8,5 +8,5 @@ block content
     .container
       +e.list
         +link(href="ui-kit.html") UI-kit (ui-kit.html)
-        +link(href="index.html") Главная (index.html)
-        //- +link(href="page1.html") page1 (page1.html)
+        +link(href="index.html") Main (index.html)
+        +link(href="space.html")  One Space (space.html)
