--- a/app/blocks/form-elements/form-elements.scss
+++ b/app/blocks/form-elements/form-elements.scss
@@ -617,6 +617,8 @@
 
       line-height: (26/17);
       color: $color-white;
+      overflow: hidden;
+      border-radius: 3px 3px 0 0;
 
       @include screen('sm') {
         @include text;
