--- a/app/blocks/form-elements/form-elements.scss
+++ b/app/blocks/form-elements/form-elements.scss
@@ -662,6 +662,7 @@
         padding-right: 25px;
         padding-bottom: 1px;
         background-color: rgba($color-select-bg, 0);
+        background-clip: padding-box;
         border-radius: 3px 3px 0 0;
         border: 2px solid transparent;
         overflow: hidden;
