--- a/app/components/condition-search/condition-search.scss
+++ b/app/components/condition-search/condition-search.scss
@@ -28,7 +28,7 @@
     }
 
     @include screen('sm') {
-      margin-bottom: 30px;
+      margin-bottom: 28px;
     }
   }
 
@@ -117,7 +117,7 @@
       flex: none;
       width: 100%;
       flex-wrap: wrap;
-      margin-bottom: 36px;
+      margin-bottom: 38px;
     }
   }
 
@@ -128,6 +128,7 @@
 
     @include screen('sm') {
       width: 100%;
+      margin-top: 28px;
     }
 
     &:not(:last-child) {
