--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -9,4 +9,4 @@ block content
       +e.list
         +link(href="ui-kit.html") UI-kit (ui-kit.html)
         +link(href="index.html") Main (index.html)
-        +link(href="space.html")  One Space (space.html)
+        //- +link(href="space.html")  One Space (space.html)
