start page space

--- a/app/blocks/box/box.scss
+++ b/app/blocks/box/box.scss
@@ -24,6 +24,11 @@
   &_big {
     width: 19px;
     height: 19px;
+
+    @include screen('sm') {
+      width: 16px;
+      height: 16px;
+    }
   }
 
   &_orange {
