--- a/app/blocks/button-heart/button-heart.scss
+++ b/app/blocks/button-heart/button-heart.scss
@@ -72,4 +72,39 @@
       }
     }
   }
+
+  &_white {
+
+    #{$b}__icon {
+
+      &_full {
+        fill: $color-white;
+      }
+    }
+  }
+
+  &_gray {
+
+    #{$b}__icon {
+      fill: $color-text-light;
+      filter: none;
+
+      &_full {
+        fill: $color-heart;
+        filter: none;
+      }
+    }
+
+    &:hover,
+    &.is-active {
+
+      #{$b}__icon {
+        filter: none;
+
+        &_full {
+          filter: none;
+        }
+      }
+    }
+  }
 }
