--- a/app/blocks/link/link.pug
+++ b/app/blocks/link/link.pug
@@ -5,6 +5,6 @@ mixin link()
 
 mixin link-icon(iconname)
   +b.A.link&attributes(attributes)._icon
-    +icon(iconname).__icon
+    +icon(iconname)(class="__icon _" + iconname)
     +e.SPAN.text
       block
