--- a/app/blocks/scroll-form/scroll-form.pug
+++ b/app/blocks/scroll-form/scroll-form.pug
@@ -1,5 +1,5 @@
 mixin scroll-form()
-  +b.DIV.scroll-form&attributes(attributes)
+  +b.DIV.scroll-form.js-sticky-block&attributes(attributes)
     +e.H3.__title Reservation form
     +select.form-select
       option(value="<div class='option-top'> <span class='cube cube_yellow'></span>dedicated desk</div> <div class='option-down'> £300 per month </div>")
