--- a/app/blocks/section/section.scss
+++ b/app/blocks/section/section.scss
@@ -26,6 +26,14 @@
     }
   }
 
+  &_inner {
+    margin-bottom: 76px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
   &_mid-mg {
     margin-bottom: 116px;
 
@@ -262,6 +270,11 @@
           margin-bottom: 42px;
         }
       }
+    }
+
+    em {
+      color: $color-accent;
+      font-style: normal;
     }
   }
 
