--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -1,4 +1,6 @@
 include ../blocks/accordion/accordion
+include ../blocks/add-button/add-button
+include ../blocks/address-list/address-list
 include ../blocks/avatar/avatar
 include ../blocks/box/box
 include ../blocks/boxes/boxes
@@ -20,6 +22,7 @@ include ../blocks/grid/grid
 include ../blocks/header-menu/header-menu
 include ../blocks/header-user/header-user
 include ../blocks/icon/icon
+include ../blocks/info-price/info-price
 include ../blocks/link/link
 include ../blocks/lists/lists
 include ../blocks/logo/logo
@@ -27,6 +30,7 @@ include ../blocks/map/map
 include ../blocks/nav-list/nav-list
 include ../blocks/news/news
 include ../blocks/overlay/overlay
+include ../blocks/page-title/page-title
 include ../blocks/page/page
 include ../blocks/popups/popups
 include ../blocks/put-block-into-slot/put-block-into-slot
@@ -51,5 +55,6 @@ include ../components/content/content
 include ../components/filter/filter
 include ../components/footer/footer
 include ../components/header/header
+include ../components/lead/lead
 include ../components/main-menu/main-menu
 include ../components/ui-kit/ui-kit
