--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -35,6 +35,11 @@
     max-width: $content-container-width;
     display: flex;
     align-items: flex-start;
+    padding: 0 $content-container-padding;
+
+    @include screen('sm') {
+      padding: 0 $container-padding-mobile;
+    }
   }
 }
 
