--- a/app/styles/helpers/_link-styles.scss
+++ b/app/styles/helpers/_link-styles.scss
@@ -8,6 +8,13 @@
   }
 }
 
+@mixin link-bordered {
+
+  &:hover {
+    color: $color-bc-dark;
+  }
+}
+
 @mixin link-disabled {
   color: $color-bc-light;
 
