--- a/app/blocks/breadcrumbs/breadcrumbs.pug
+++ b/app/blocks/breadcrumbs/breadcrumbs.pug
@@ -2,5 +2,5 @@ mixin breadcrumbs(json)
   +b.UL.breadcrumbs&attributes(attributes)
     each crumb in json
       +e.LI.item
-        +link(href='#')
+        +link._bordered.__link(href='#')
           =crumb
